background fixed attempt 3 on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,8 @@
 
 html {
     background-color: black;
+    width: 100%;
+	height: 100%;
 }
 
 body{
@@ -10,7 +12,15 @@ body{
     background-position: center;
     background-size: cover;
     font-weight: bold;
+    width: 100%;
+	height: 100%;
     
+}
+
+#wrapper{
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
 }
     
 body:before {
